Bug Fix: Datetimepicker's overflow was hidden in acordion for channels in MT form.

--- a/app/src/app/modules/mobile-terminal/pages/form/form.component.scss
+++ b/app/src/app/modules/mobile-terminal/pages/form/form.component.scss
@@ -74,6 +74,10 @@
     .channel {
       margin: 0;
     }
+
+    .mat-expansion-panel {
+      overflow: visible;
+    }
   }
 }
 
